gac_sb/objects/INNOequipeConsulting__c.object
<CustomObject>
    <fields>
        <fullName>ActifReprise__c</fullName>
        <label>ActifReprise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actif__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Permet de rendre actif un utilisateur</description>
        <label>Actif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avancement__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Total__c == 0,
0,
Nombre_jours_travailles_Total__c / Nombre_jours_theoriques_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CleUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Clé unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cout_reel__c</fullName>
        <formula>IF( ISBLANK(MissionCIR__r.Cout_standard_INNO_advance__c), 
   null, 
   CASE( TEXT(Role__c),
      &quot;Consultant scientifique&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
      &quot;Consultant fiscaliste&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
      &quot;Consultant extérieur&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
      &quot;Auditeur Financier&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
      &quot;Consultant scientifique RO&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Redacteur_RO__c,
      &quot;Superviseur&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c,
      &quot;Superviseur/Consultant&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c,
      &quot;Manager&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Manager__c,
      0
   ) * Nombre_jours_travailles_Total__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût réel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_theorique__c</fullName>
        <formula>IF( ISBLANK(MissionCIR__r.Cout_standard_INNO_advance__c), 
null, 
CASE( TEXT(Role__c), 
&quot;Consultant scientifique&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
&quot;Consultant fiscaliste&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
&quot;Consultant extérieur&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c,
&quot;Auditeur Financier&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Consultant__c, 
&quot;Consultant scientifique RO&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Redacteur_RO__c,
&quot;Superviseur&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c, 
&quot;Superviseur/Consultant&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c, 
&quot;Manager&quot;, MissionCIR__r.Cout_standard_INNO_advance__r.Cout_standard_Manager__c, 
0 
) * Nombre_jours_theoriques_Total__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût théorique</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forcer_recalcul_manual_sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permet de forcer le recalcul des manual sharing dans les trigger des equipe consulting</description>
        <label>Forcer le recalcul des manual sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_utilisateur__c</fullName>
        <formula>Utilisateur__c</formula>
        <label>Id utilisateur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissionCIR__c</fullName>
        <label>Mission CIR</label>
        <referenceTo>INNOmission__c</referenceTo>
        <relationshipName>EquipesConsulting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mission_Utilisateur__c</fullName>
        <description>Champ technique</description>
        <formula>CASESAFEID(MissionCIR__c) + &quot;-&quot; + CASESAFEID(Utilisateur__c)</formula>
        <label>Mission-Utilisateur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_engages_Audit__c</fullName>
        <formula>Nombre_jours_programmes_Audit__c + Nombre_jours_travailles_Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours engagés - Audit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_engages_Controle__c</fullName>
        <formula>Nombre_jours_programmes_Controle__c + Nombre_jours_travailles_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours engagés - Contrôle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_engages_Justif__c</fullName>
        <formula>Nombre_jours_programmes_Justification__c + Nombre_jours_travailles_Justification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours engagés - Justification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_engages_Total__c</fullName>
        <formula>Nombre_jours_engages_Audit__c + Nombre_jours_engages_Controle__c + Nombre_jours_engages_Justif__c + Nombre_jours_engages_Valorisation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours engagés - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_engages_Valorisation__c</fullName>
        <formula>Nombre_jours_programmes_Valorisation__c + Nombre_jours_travailles_Valorisation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours engagés - Valorisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_estimes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours estimés</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Audit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours programmés - Audit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Controle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours programmés - Contrôle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Justification__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours programmés - Justif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Total__c</fullName>
        <formula>Nombre_jours_programmes_Audit__c + Nombre_jours_programmes_Valorisation__c + Nombre_jours_programmes_Justification__c + Nombre_jours_programmes_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours programmes - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Valorisation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours programmés - Valo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_restants_Audit__c</fullName>
        <formula>Nombre_jours_theoriques_Audit__c - Nombre_jours_travailles_Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours restants - Audit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_restants_Controle__c</fullName>
        <formula>Nombre_jours_theoriques_Controle__c - Nombre_jours_travailles_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours restants - Contrôle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_restants_Justification__c</fullName>
        <formula>Nombre_jours_theoriques_Justification__c - Nombre_jours_travailles_Justification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours restants - Justif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_restants_Total__c</fullName>
        <formula>Nombre_jours_theoriques_Total__c - Nombre_jours_travailles_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours restants - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_restants_Valorisation__c</fullName>
        <formula>Nombre_jours_theoriques_Valorisation__c - Nombre_jours_travailles_Valorisation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours restants - Valo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Audit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours théoriques - Audit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Controle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours théoriques - Contrôle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Justification__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours théoriques - Justif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Total__c</fullName>
        <formula>Nombre_jours_theoriques_Audit__c + 
Nombre_jours_theoriques_Valorisation__c + 
Nombre_jours_theoriques_Justification__c + 
Nombre_jours_theoriques_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours théoriques - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_theoriques_Valorisation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours théoriques - Valo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Audit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours travaillés - Audit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Controle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours travaillés - Contrôle</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Justification__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours travaillés - Justif</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Total__c</fullName>
        <formula>Nombre_jours_travailles_Audit__c + Nombre_jours_travailles_Valorisation__c + Nombre_jours_travailles_Justification__c + Nombre_jours_travailles_Controle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de jours travaillés - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_travailles_Valorisation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nombre de jours travaillés - Valo</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Rôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant scientifique</fullName>
                    <default>true</default>
                    <label>Consultant scientifique</label>
                </value>
                <value>
                    <fullName>Consultant fiscaliste</fullName>
                </value>
                <value>
                    <fullName>Consultant extérieur</fullName>
                </value>
                <value>
                    <fullName>Rédacteur scientifique</fullName>
                </value>
                <value>
                    <fullName>Redacteur scientifique RO</fullName>
                    <label>Rédacteur scientifique RO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilisateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilisateur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EquipesConsulting2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Equipe consulting</label>
    <nameField>
        <displayFormat>EquipeConsulting-{000000}</displayFormat>
        <label>Nom de l&apos;équipe consulting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipes consulting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>